refactor: fix FCM

--- a/app/src/main/res/layout/notification.xml
+++ b/app/src/main/res/layout/notification.xml
@@ -21,7 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
         android:fontFamily="@font/montserrat"
-        android:text="Cảm ơn bạn đã sử dụng dịch vụ"
+        android:text="Thích chỗ nào đặt ngay chỗ đó"
         android:textColor="@color/black"
         android:textSize="15sp"
         android:textStyle="bold"
@@ -35,7 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_marginVertical="20dp"
         android:fontFamily="@font/montserrat"
-        android:text="Vé thì nhiều chứ chỗ đẹp thì hiêm, Nguyễn Văn A chọn nhanh VeXeRe chốt đơn liền nè"
+        android:text="Vé thì nhiều chứ chỗ đẹp thì hiêm, chọn nhanh VeXeRe chốt đơn liền nè"
         android:textColor="@color/black"
         android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
