--- a/app/src/main/res/layout/activity_admin_blog_create.xml
+++ b/app/src/main/res/layout/activity_admin_blog_create.xml
@@ -127,7 +127,7 @@
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     >
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/adminBusOperatorNameCreateEt"
+                        android:id="@+id/edtTitle"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:inputType="text"
