--- a/app/src/main/res/layout/fragment_personal_information.xml
+++ b/app/src/main/res/layout/fragment_personal_information.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PersonalInformationFragment">
+    tools:context=".User.Screen.BottomNavigate.PersonalInformationFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
