--- a/app/src/main/res/layout/activity_user_infor_ticket_history.xml
+++ b/app/src/main/res/layout/activity_user_infor_ticket_history.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/cardView"
+        android:id="@+id/fb_avt_card"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_marginTop="24dp"
@@ -33,7 +33,7 @@
         android:background="@color/blank"
         android:scaleType="fitCenter"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/cardView"
+        app:layout_constraintTop_toTopOf="@+id/fb_avt_card"
         app:srcCompat="@drawable/back_icon" />
 
     <ImageView
@@ -43,7 +43,7 @@
         android:layout_marginTop="150dp"
         app:layout_constraintEnd_toEndOf="@+id/ticket_lv"
         app:layout_constraintStart_toStartOf="@+id/ticket_lv"
-        app:layout_constraintTop_toBottomOf="@+id/cardView"
+        app:layout_constraintTop_toBottomOf="@+id/fb_avt_card"
         app:srcCompat="@drawable/loading" />
 
     <View
@@ -92,7 +92,7 @@
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView">
+        app:layout_constraintTop_toBottomOf="@+id/fb_avt_card">
 
         <TextView
             android:id="@+id/textView2"
