--- a/app/src/main/res/layout/ca_nhan.xml
+++ b/app/src/main/res/layout/ca_nhan.xml
@@ -16,7 +16,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/cardView"
+            android:id="@+id/fb_avt_card"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginStart="16dp"
@@ -41,8 +41,8 @@
             android:textColor="@color/white"
             android:textSize="16sp"
             android:textStyle="bold"
-            app:layout_constraintStart_toEndOf="@+id/cardView"
-            app:layout_constraintTop_toTopOf="@+id/cardView" />
+            app:layout_constraintStart_toEndOf="@+id/fb_avt_card"
+            app:layout_constraintTop_toTopOf="@+id/fb_avt_card" />
 
         <androidx.cardview.widget.CardView
             android:layout_width="50dp"
