--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,5 +24,12 @@
     <color name="progress">#2CAC62</color>
     <color name="progress_background">#E6E6E6</color>
     <color name="golden">#FCD23E</color>
-    <color name="app_background">#F4F4F4</color>
+    <color name="app_background">#F6F6F6</color>
+    <color name="gray_icon">#D8D8D8</color>
+    <color name="gray_panel">#FBFBFB</color>
+    <color name="gray_bold_text">#9A9A9A</color>
+    <color name="gray_light_text">#C8C8C8</color>
+    <color name="blue_panel">#462675E6</color>
+    <color name="green_icon">#6BB514</color>
+    <color name="green_panel">#6887F604</color>
 </resources>
