--- a/app/src/main/res/layout/fragment_ca_nhan.xml
+++ b/app/src/main/res/layout/fragment_ca_nhan.xml
@@ -84,7 +84,7 @@
             </LinearLayout>
 
             <TextView
-                android:id="@+id/Login_buton_in_person"
+                android:id="@+id/loginBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
