--- a/app/src/main/res/layout/fragment_ticket_history.xml
+++ b/app/src/main/res/layout/fragment_ticket_history.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".User.Screen.BottomNavigate.TicketHistoryFragment">
+    tools:context=".User.Screen.BottomNavigate.TicketHistory.TicketHistoryFragment">
 
     <TabHost
         android:id="@+id/tabHostVe"
