--- a/app/src/main/res/layout/ve_da_di.xml
+++ b/app/src/main/res/layout/ve_da_di.xml
@@ -14,6 +14,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rclView_ve_da_di"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
